Fixed the main section size on mobile devices

--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -314,6 +314,8 @@ html
     .container
         width: 90%
     .main-section
+        min-height: auto
+        padding-bottom: 30px
         &__logo
             width: 100px
     .left-wrapper
